<resources>
    <string name="app_name">CPS251_LayoutProject</string>
    <string name="title">This is my layout project</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="checkbox_1">Checkbox 1</string>
    <string name="checkbox_2">Checkbox 2</string>
    <string name="checkbox_3">Checkbox 3</string>
    <string name="checkbox_4">Checkbox 4</string>
    <string name="checkbox_5">Checkbox 5</string>
    <string name="checkbox_6">Checkbox 6</string>
</resources>