<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="17dp"
        android:text="@string/title"
        android:textColor="#E53935"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/button_1"
        app:layout_constraintBottom_toBottom0f="parent"
        app:layout_constraintEnd_toEnd0f="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTop0f="parent"
        tools:layout_editor_absoluteY="149dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:text="@string/button_2"
        app:layout_constraintBottom_toBottom0f="parent"
        app:layout_constraintEnd_toEnd0f="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTop0f="parent"
        tools:layout_editor_absoluteY="149dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:text="@string/button_3"
        app:layout_constraintBottom_toBottom0f="parent"
        app:layout_constraintEnd_toEnd0f="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTop0f="parent"
        tools:layout_editor_absoluteY="149dp" />

    <LinearLayout
    android:id="@+id/checkboxesLayout"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="60dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="50dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@id/imageView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.483"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/titleTextView"
    app:layout_constraintVertical_bias="0.65999997">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageView">

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd=".01dp"
            android:layout_weight="1"
            android:text="@string/checkbox_1" />
        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/checkbox_2" />
        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/checkbox_3" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageView">

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd=".01dp"
            android:layout_weight="1"
            android:text="@string/checkbox_4" />
        <CheckBox
            android:id="@+id/checkbox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/checkbox_5" />
        <CheckBox
            android:id="@+id/checkbox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/checkbox_6" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="461dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/smileyface"
        app:layout_constraintBottom_toBottom0f="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEnd0f="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxesLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>